# logan

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: C5H12O_ground_truth.extxyz  C5H12O_ground_truth.smi  C5H12O_training.extxyz  mp-1188220_ground_truth.extxyz  mp-1188220_training.extxyz  mp-546546_ground_truth.extxyz  mp-546546_training.extxyz  mp-546794_ground_truth.extxyz  mp-546794_training.extxyz  mp-554151_ground_truth.extxyz  mp-554151_training.extxyz  mp-555235_ground_truth.extxyz  mp-555235_training.extxyz  mp-559550_ground_truth.extxyz  mp-559550_training.extxyz
scripts/: compare_to_groundtruth_C5H12O.py  compare_to_groundtruth_SiO2.py  generate_filter_C5H12O.py  generate_filter_SiO2.py  relax_C5H12O.py  relax_SiO2.py  train_C5H12O.py  train_SiO2.py
src/logan/: __init__.py  bessel_descriptors.py  logan.py  models.py  training.py  utilities.py
